samples/_failures_safe/1761042440_7a335d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64fa2ab0.c: In function ‘main’:
./samples/SAFE/__tmp_64fa2ab0.c:161:5: error: expected declaration or statement at end of input
  161 |     }
      |     ^
